fix (header): Adiciona pequenos ajustes na responsividade do header p.2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["btns", "Wikimedic"],
+  "cSpell.words": ["btns", "responsividade", "Wikimedic"],
   "cSpell.language": "en,pt,lorem"
 }
